# pi-b-q-rust

./: .gitignore  Cargo.toml  Dockerfile  README  README.md  build.rs  docker-compose.yml  install.sh
migrations/: 001__readings.sql  002__connection_statuses.sql  003__projects.sql
pi_config/: bluetooth_rfcomm.service  pibq.env  pibq_harvester.service  pibq_web  pibq_web.service
src/: harvester.rs  lib.rs  main.rs  models.rs  sql.rs  web.rs
src/bluetherm/: connection.rs  mod.rs
src/bluetherm/connection/: mod.rs  thread_guard.rs
src/bluetherm/packet/: converters.rs  crc.rs  data_flags.rs  message_type.rs  mod.rs
src/sql/: migrations.rs  mod.rs  pool.rs
src/weblib/: mod.rs  view_models.rs  web_handlers.rs
tests/: lib.rs
web/assets/css/: journal-fonts.css  styles.css  united-fonts.css
web/templates/: edit_project.hbs  layout.hbs  projects.hbs  show_project.hbs
