[package]
name = "pi-b-q-rust"
version = "0.1.0"
authors = ["Dan Elbert <dan.elbert@gmail.com>"]
publish = false

[lib]
name = "pibq"
path = "src/lib.rs"

[[bin]]
name = "web"
path = "src/web.rs"

[[bin]]
name = "harvester"
path = "src/harvester.rs"

[build-dependencies]
serde_codegen = "*"
syntex = "*"

[dependencies]
bitflags = "*"
libc = "*"
getopts = "0.2.14"
chrono = "0.2"
serial = "0.3"
iron = "0.3.0"
router = "0.1.1"
staticfile = "0.2.0"
mount = "0.1.0"
handlebars-iron = "0.15.2"
url = "*"
rustc-serialize = "*"

[dependencies.rusqlite]
version = "0.7.3"
features = ["chrono"]
