[package]
name = "pi-b-q-rust"
version = "0.1.0"
authors = ["Dan Elbert <dan.elbert@gmail.com>"]
build = "build.rs"
links = "libsqlite"
publish = false

[lib]
name = "pibq"
path = "src/lib.rs"

[[bin]]
name = "web"
path = "src/web.rs"

[[bin]]
name = "harvester"
path = "src/harvester.rs"

[build-dependencies]
gcc = "0.3"

[dependencies]
bitflags = "*"
libc = "*"
getopts = "0.2.14"
serial = "0.3"
iron = "0.3.0"
router = "0.1.1"
staticfile = "0.2.0"
mount = "0.1.0"
handlebars-iron = "0.15.2"
url = "*"
persistent = "0.1.0"
rustc-serialize = "*"
r2d2 = "*"
logger = "0.0.3"

[dependencies.rusqlite]
version = "0.7.3"
features = ["chrono"]

[dependencies.chrono]
version = "0.2"
features = ["rustc-serialize"]
